--- a/InterviewPracticeTest/InterviewPracticeTest.csproj
+++ b/InterviewPracticeTest/InterviewPracticeTest.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="FizzBuzzTest.cs" />
+    <Compile Include="EnumerableTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NumberPrinterTest.cs" />
   </ItemGroup>
