--- a/InterviewPracticeTest/InterviewPracticeTest.csproj
+++ b/InterviewPracticeTest/InterviewPracticeTest.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -50,10 +51,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="PowerOfTwo.cs" />
     <Compile Include="FizzBuzzTest.cs" />
     <Compile Include="EnumerableTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NumberPrinterTest.cs" />
+    <Compile Include="PowerOfTwoTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InterviewPractice\InterviewPractice.csproj">
