--- a/InterviewPractice/InterviewPractice.csproj
+++ b/InterviewPractice/InterviewPractice.csproj
@@ -41,10 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InterviewTestQuestions.cs" />
+    <Compile Include="LockExample.cs" />
     <Compile Include="NumberPrinter.cs" />
     <Compile Include="FizBuzz.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SemaphoreExample.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
