--- a/InterviewPracticeTest/InterviewPracticeTest.csproj
+++ b/InterviewPracticeTest/InterviewPracticeTest.csproj
@@ -61,6 +61,8 @@
     <Compile Include="TwoSum.cs" />
     <Compile Include="TwoSumTest.cs" />
     <Compile Include="StockPricingTest.cs" />
+    <Compile Include="ThreadingUnitTest.cs" />
+    <Compile Include="InterviewTestQuestionsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InterviewPractice\InterviewPractice.csproj">
